--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,13 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
-lib_deps = adafruit/Adafruit Unified Sensor@^1.1.14
-
-board_build.embed_txtfiles =
-    certs/api.pem
-    html/index.html
+lib_deps = 
+	adafruit/Adafruit Unified Sensor@^1.1.14
+	adafruit/Adafruit GFX Library@^1.11.9
+	adafruit/DHT sensor library@^1.4.6
+	bblanchon/ArduinoJson@^6.21.3
+lib_extra_dirs = 
+	lib/
+board_build.embed_txtfiles = 
+	certs/api.pem
+	html/index.html
