Add CO2 sensor and Fan settings, some UI changes

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,7 @@ lib_deps =
 	adafruit/Adafruit GFX Library@^1.11.9
 	adafruit/DHT sensor library@^1.4.6
 	bblanchon/ArduinoJson@^6.21.3
+	wifwaf/MH-Z19@^1.5.4
 lib_extra_dirs = 
 	lib/
 board_build.embed_txtfiles = 
