--- a/platformio.ini
+++ b/platformio.ini
@@ -14,11 +14,11 @@ board = esp32doit-devkit-v1
 framework = arduino
 lib_deps = 
 	adafruit/Adafruit Unified Sensor@^1.1.14
+	adafruit/Adafruit BME280 Library@^2.2.4
 	adafruit/Adafruit GFX Library@^1.11.9
-	adafruit/DHT sensor library@^1.4.6
 	bblanchon/ArduinoJson@^6.21.3
 	wifwaf/MH-Z19@^1.5.4
-lib_extra_dirs = 
+lib_extra_dirs =
 	lib/
 board_build.embed_txtfiles = 
 	certs/api.pem
